#139 Fix issue of overlap of button and images on the viewers (#143)

--- a/applications/salk-portal/src/css/flexLayout.less
+++ b/applications/salk-portal/src/css/flexLayout.less
@@ -55,16 +55,19 @@
   }
 }
 
-.position-toolbar {
-  .MuiButtonBase-root {
-    color: @canvasIconColor;
-  }
-  .svg-inline--fa {
-    width: 12px;
-    height: 12px;
-  }
-  .squareB {
-    width: 12px!important;
-    height: 12px!important;
+body {
+  .position-toolbar {
+    position: inherit;
+    .MuiButtonBase-root {
+      color: @canvasIconColor;
+    }
+    .svg-inline--fa {
+      width: 12px;
+      height: 12px;
+    }
+    .squareB {
+      width: 12px!important;
+      height: 12px!important;
+    }
   }
 }
